<resources>
    <string name="app_name">DietStock</string>
    <string name="title_home">Home</string>
    <string name="title_ranking">Ranking</string>
    <string name="title_food">Food</string>
    <string name="title_rolemodel">RoleModel</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="predicted">test</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="after_image_text">현재</string>
    <string name="before_image_text">시작</string>

    <string name="my_goal">목표</string>
    <string name="my_height">키</string>
    <string name="my_weight">몸무게</string>

</resources>