<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"

        android:icon="@drawable/ic_baseline_insert_chart_24"

        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_ranking"

        android:icon="@drawable/ic_baseline_emoji_events_24"

        android:title="@string/title_ranking" />

    <item
        android:id="@+id/navigation_feedback"

        android:icon="@drawable/ic_baseline_feedback_24"

        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_food"

        android:icon="@drawable/ic_baseline_photo_camera_24"

        android:title="@string/title_food" />

    <item
        android:id="@+id/navigation_rolemodel"

        android:icon="@drawable/ic_baseline_star_24"

        android:title="@string/title_rolemodel" />

</menu>