<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_photo_camera_24"
            android:title="home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="star" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="feedback" />
    </group>-->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_goal"
            android:title="@string/my_goal"
            />
        <item
            android:id="@+id/nav_height"
            android:title="@string/my_height"/>
        <item
            android:id="@+id/nav_weight"
            android:title="@string/my_weight"/>
    </group>


</menu>